# the_met_art_dataset

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api-reference/: index.html
data/raw/: art_db.json
docs/: api-reference.md  index.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
the_met_art_dataset/: config.json  filter.py  scraper.py
