[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "the_met_art_dataset"
version = "0.0.1"
description = "A small python package to use The Metropolitan Museum of NYC to create an art dataset."
authors = [
  { name = "Ulises Rey" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "material>=0.1",
    "mkdocs",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "pip",
    "python-dotenv",
    "requests>=2.34.0",
    "ruff",
]
requires-python = "~=3.12.0"

[project.urls]
Documentation = "https://ulisesrey.github.io/the_met_art_dataset/"
Repository = "https://github.com/ulisesrey/the_met_art_dataset"


[tool.ruff]
line-length = 99
src = ["the_met_art_dataset"]
include = ["pyproject.toml", "the_met_art_dataset/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["the_met_art_dataset"]
force-sort-within-sections = true

